--- a/petstagram/main/templates/home_page.html
+++ b/petstagram/main/templates/home_page.html
@@ -16,86 +16,86 @@
 <body>
 
 {% block nav %}
-<!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom:2%">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <!-- Link to Home Page -->
-                <a class="nav-link" href="{% url 'index' %}">Home</a>
-            </li>
-            {% if user.is_authenticated %}
-            <li class="nav-item">
-                <!-- Link to Dashboard Page -->
-                <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
-            </li>
-            <li class="nav-item">
-                <!-- Link to Profile Page -->
-                <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-            </li>
-            {% endif %}
-        </ul>
-    </div>
-</nav>
-<!-- End Navigation Bar -->
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom:2%">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <!-- Link to Home Page -->
+                    <a class="nav-link" href="{% url 'index' %}">Home</a>
+                </li>
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <!-- Link to Dashboard Page -->
+                        <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
+                    </li>
+                    <li class="nav-item">
+                        <!-- Link to Profile Page -->
+                        <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
+    <!-- End Navigation Bar -->
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="jumbotron parent">
-        <img style="width: 100%"
-             src="https://activepets.co.za/web/ap-content/uploads/2019/08/Active-pets-dogs-and-cats.png" alt="">
-        <div class="absolute">
-            <h1 class="display-4">Welcome to Petstagram</h1>
-            <p class="lead">Share your pets photos.</p>
-            <hr class="my-4">
-            <div class="inner cover">
-                <h1 class="cover-heading"></h1>
-                <div class="row">
+    <div class="container">
+        <div class="jumbotron parent">
+            <img style="width: 100%"
+                 src="https://activepets.co.za/web/ap-content/uploads/2019/08/Active-pets-dogs-and-cats.png" alt="">
+            <div class="absolute">
+                <h1 class="display-4">Welcome to Petstagram</h1>
+                <p class="lead">Share your pets photos.</p>
+                <hr class="my-4">
+                <div class="inner cover">
+                    <h1 class="cover-heading"></h1>
+                    <div class="row">
 
-                    {% if user.is_authenticated %}
-                    <!-- Button to show if profile created -->
-                    <div class="col-lg-6">
-                        <p class="lead">
-                            <a href="{% url 'dashboard' %}" class="btn btn-lg btn-secondary">Enter</a></p>
-                    </div>
+                        {% if user.is_authenticated %}
+                            <!-- Button to show if profile created -->
+                            <div class="col-lg-6">
+                                <p class="lead">
+                                    <a href="{% url 'dashboard' %}" class="btn btn-lg btn-secondary">Enter</a></p>
+                            </div>
 
-                    {% else %}
-                    <!-- Button to show if profile is NOT created -->
-                    <div class="col-lg-6">
-                        <p class="lead">
-                            <a href="{% url 'create profile' %}" class="btn btn-lg btn-secondary">Create Profile</a>
-                        </p>
+                        {% else %}
+                            <!-- Button to show if profile is NOT created -->
+                            <div class="col-lg-6">
+                                <p class="lead">
+                                    <a href="{% url 'create profile' %}" class="btn btn-lg btn-secondary">Create
+                                        Profile</a>
+                                </p>
+                            </div>
+                        {% endif %}
                     </div>
-                    {% endif %}
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 {% endblock %}
-<!-- Page Footer -->
-<footer class="fixed-bottom card-footer ">
-    <div>@2022 Python Web Basics Workshop at SoftUni</div>
-</footer>
-<!-- End Page Footer -->
-
-</body>
 
 {% block footer %}
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
-        integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-        crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
-        integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
-        crossorigin="anonymous"></script>
+    <!-- Page Footer -->
+    <footer class="fixed-bottom card-footer ">
+        <div>@2022 Python Web Basics Workshop at SoftUni</div>
+    </footer>
+    <!-- End Page Footer -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+            integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+            integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+            crossorigin="anonymous"></script>
 {% endblock %}
+</body>
 </html>
