--- a/templates/auth_templates/profile_details.html
+++ b/templates/auth_templates/profile_details.html
@@ -61,8 +61,8 @@
                     </div>
                     <p class="mt-2">Total Images: {{ photos_count }}</p>
                     <p class="mt-2">Total Likes: {{ photos_likes }}</p>
-                    <a href="#" class="btn btn-primary">Edit</a>
-                    <a href="#" class="btn btn-danger">Delete</a>
+                    <a href="{% url 'edit profile' %}" class="btn btn-primary">Edit</a>
+                    <a href="{% url 'delete profile' %}" class="btn btn-danger">Delete</a>
                 </div>
             </div>
         </div>
