--- a/templates/photo_details.html
+++ b/templates/photo_details.html
@@ -59,8 +59,8 @@
                 <!-- Likes Counter -->
                 <p class="mt-2">Likes: {{ photo.likes }}</p>
                 <!-- Buttons -->
-                <a href="#" class="btn btn-primary">Edit</a>
-                <a href="#" class="btn btn-danger">Delete</a>
+                <a href="{% url 'edit profile' %}" class="btn btn-primary">Edit</a>
+                <a href="{% url 'delete profile' %}" class="btn btn-danger">Delete</a>
             </div>
         </div>
     </div>
