--- a/templates/auth_templates/profile_details.html
+++ b/templates/auth_templates/profile_details.html
@@ -2,31 +2,7 @@
 
 {% block nav %}
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom:2%">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'index' %}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Add Pet</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Add Photo</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    {% include 'main_nav_snippet.html' %}
     <!-- End Navigation Bar -->
 {% endblock %}
 
@@ -77,10 +53,10 @@
                 <div style="width: 18rem;">
                     <h5>{{ pet.name }}</h5>
                     {% if pet.date_of_birth %}
-                    <p class="mt-2">Age: {{ pet.age }}</p>
+                        <p class="mt-2">Age: {{ pet.age }}</p>
                     {% endif %}
-                    <a href="#" class="btn btn-primary">Edit</a>
-                    <a href="#" class="btn btn-danger">Delete</a>
+                    <a href="{% url 'edit pet' pet.id %}" class="btn btn-primary">Edit</a>
+                    <a href="{% url 'delete pet' pet.id %}" class="btn btn-danger">Delete</a>
                 </div>
             {% endfor %}
         </div>
