--- a/templates/pet_templates/pet_create.html
+++ b/templates/pet_templates/pet_create.html
@@ -7,18 +7,17 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container mb-5">
-        <h1 class="text-center">Edit Your Profile</h1>
+    <div class="container">
+        <h1 class="text-center">Add Your Pet Info</h1>
         <div class="row">
             <div class="col-lg-3"></div>
             <div class="col-lg-6">
-                <form method="POST" action="">
+                <form method="post" class="container mb-5" action="">
                     {% csrf_token %}
-                    {{ user_form }}
-                    {{ profile_form }}
-                    <!-- Form for Editing a Profile Info -->
+                    {{ form }}
+                    <!-- Form for Adding a Pet Info -->
 
-                    <button class="btn btn-primary mt-2" type="submit">Edit</button>
+                    <button class="btn btn-primary mt-2" type="submit">Create</button>
                 </form>
             </div>
             <div class="col-lg-3"></div>
