--- a/templates/pet_templates/pet_edit.html
+++ b/templates/pet_templates/pet_edit.html
@@ -7,16 +7,16 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container mb-5">
-        <h1 class="text-center">Edit Your Profile</h1>
+    <div class="container">
+        <h1 class="text-center">Edit Your Pet Info</h1>
         <div class="row">
             <div class="col-lg-3"></div>
             <div class="col-lg-6">
-                <form method="POST" action="">
+                <form method="post" action="">
                     {% csrf_token %}
-                    {{ user_form }}
-                    {{ profile_form }}
-                    <!-- Form for Editing a Profile Info -->
+                    {{ form }}
+
+                    <!-- Form for Editing a Pet Info -->
 
                     <button class="btn btn-primary mt-2" type="submit">Edit</button>
                 </form>
