--- a/templates/main_nav_snippet.html
+++ b/templates/main_nav_snippet.html
@@ -15,7 +15,7 @@
                 <a class="nav-link" href="{% url 'create pet' %}">Add Pet</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Add Photo</a>
+                <a class="nav-link" href="{% url 'create photo' %}">Add Photo</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'profile' %}">Profile</a>
