--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -28,16 +28,10 @@
                     <!-- Link to Home Page -->
                     <a class="nav-link" href="{% url 'index' %}">Home</a>
                 </li>
-                {% if user.is_authenticated %}
                     <li class="nav-item">
                         <!-- Link to Dashboard Page -->
                         <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
                     </li>
-                    <li class="nav-item">
-                        <!-- Link to Profile Page -->
-                        <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-                    </li>
-                {% endif %}
             </ul>
         </div>
     </nav>
@@ -68,8 +62,8 @@
                             <!-- Button to show if profile is NOT created -->
                             <div class="col-lg-6">
                                 <p class="lead">
-                                    <a href="{% url 'create profile' %}" class="btn btn-lg btn-secondary">Create
-                                        Profile</a>
+                                    <a href="{% url 'login' %}" class="btn btn-lg btn-secondary">Login</a>
+                                    <a href="{% url 'create profile' %}" class="btn btn-lg btn-secondary">Register</a>
                                 </p>
                             </div>
                         {% endif %}
