--- a/templates/main_nav_snippet.html
+++ b/templates/main_nav_snippet.html
@@ -11,15 +11,20 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'create pet' %}">Add Pet</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'create photo' %}">Add Photo</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-            </li>
+            {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'create pet' %}">Add Pet</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'create photo' %}">Add Photo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Log out</a>
+                </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
