--- a/templates/photo_templates/photo_details.html
+++ b/templates/photo_templates/photo_details.html
@@ -30,13 +30,21 @@
                 {% if photo.description %}
                     <p class="mt-2">Description: {{ photo.description }}</p>
                 {% endif %}
-                <!-- Likes Button -->
-                <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                {% if user.is_authenticated and user != photo.user %}
+                    {% if not already_liked.all %}
+                        <!-- Likes Button -->
+                        <a href="{% url 'like' photo.id %}"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                    {% else %}
+                        <a href=""><i class="fa fa-heart" style="color:red" aria-hidden="true"></i></a>
+                    {% endif %}
+                {% endif %}
                 <!-- Likes Counter -->
                 <p class="mt-2">Likes: {{ photo.likes }}</p>
-                <!-- Buttons -->
-                <a href="{% url 'edit photo' photo.id %}" class="btn btn-primary">Edit</a>
-                <a href="" class="btn btn-danger">Delete</a>
+                {% if user == photo.user %}
+                    <!-- Buttons -->
+                    <a href="{% url 'edit photo' photo.id %}" class="btn btn-primary">Edit</a>
+                    <a href="" class="btn btn-danger">Delete</a>
+                {% endif %}
             </div>
         </div>
     </div>
